--- a/config.toml
+++ b/config.toml
@@ -31,7 +31,7 @@ googleAnalytics = ""
 	highlight_css  = ""
 
 	[params.palette]
-    	primary = "1.0"
+    	primary = "yellow"
     	accent  = "teal"
 
     [params.font]
